# miniqmc-1

./: CMakeLists.txt
CMake/: FindGA.cmake
spo_only/: MultiBspline.hpp  compile.sh  spo_driver.cpp
src/: CMakeLists.txt  config.h.cmake.in
src/Drivers/: CMakeLists.txt  check_spo.cpp  miniqmc.cpp  spo_driver.cpp  spo_kernel.cpp
src/Numerics/Einspline/: bspline_base.h  multi_bspline_structs.h
src/Numerics/Spline2/: MultiBspline.hpp  bspline_allocator.cpp  bspline_allocator.hpp  einspline_allocator.c  einspline_allocator.cpp
src/Particle/test/: test_bconds.cpp
src/QMCWaveFunctions/: Determinant.h  DeterminantRef.h  einspline_spo.hpp
src/Utilities/: Communicate.cpp  NewTimer.cpp  NewTimer.h  SplineCoefs.hpp
